@@ -369,6 +369,9 @@
 %! result = zeros (1, 128);
 %! 
 %! result (33:127) = 1;
+%! if (ispc () && ! isunix ())
+%!   result(10) = 1;
+%! endif
 %! 
 %! assert(all (isprint (charset) == result));
 
