@@ -253,7 +253,7 @@
 %!error <Invalid call to file_in_path.*> file_in_path ("foo", "bar", "baz", "ooka");
 
 %% test/octave.test/system/tilde_expand-1.m
-%!test
+%!testif HAVE_GETPWUID
 %! x = getpwuid (getuid ());
 %! assert((strcmp (x.dir, tilde_expand ("~"))
 %! && strcmp (x.dir, tilde_expand (sprintf ("~%s", x.name)))
@@ -266,7 +266,8 @@
 %!error <Invalid call to tilde_expand.*> tilde_expand ("str", 2);
 
 %% test/octave.test/system/getpgrp-1.m
-%!assert(getpgrp () > 0);
+%!testif HAVE_GETPGRP
+%! assert(getpgrp () > 0);
 
 %% test/octave.test/system/getpgrp-2.m
 %!error <... getpgrp> getpgrp (1);
@@ -278,7 +279,8 @@
 %!error <... getpid> getpid (1);
 
 %% test/octave.test/system/getppid-1.m
-%!assert(getppid () > 0);
+%!testif HAVE_GETPPID
+%! assert(getppid () > 0);
 
 %% test/octave.test/system/getppid-2.m
 %!error <... getppid> getppid (1);
@@ -347,7 +349,14 @@
 %! cd /
 %! d1 = pwd ();
 %! cd (xdir);
-%! assert("/", d1);
+%! if (ispc () && ! isunix ())
+%!   # should be a drive letter
+%!   assert(length (d1), 3);
+%!   assert(d1(2), ":");
+%!   assert(d1(3), "\\");
+%! else
+%!   assert("/", d1);
+%! endif
 %! assert(pwd(), xdir);
 
 %% test/octave.test/system/cd-2.m
@@ -357,7 +366,7 @@
 %!assert(isstr (pwd ()));
 
 %% test/octave.test/system/getpwent-1.m
-%!test
+%!testif HAVE_GETPWENT
 %! s = getpwent ();
 %! endpwent (); 
 %! assert((isstruct (s)
@@ -373,7 +382,7 @@
 %!error <Invalid call to getpwent.*> getpwent (1);
 
 %% test/octave.test/system/getpwuid-1.m
-%!test
+%!testif HAVE_GETPWUID
 %! x = getpwent ();
 %! y = getpwuid (x.uid);
 %! endpwent (); 
@@ -386,7 +395,7 @@
 %!error <Invalid call to getpwuid.*> getpwuid (1, 2);
 
 %% test/octave.test/system/getpwnam-1.m
-%!test
+%!testif HAVE_GETPWNAM
 %! x = getpwent ();
 %! y = getpwnam (x.name);
 %! endpwent (); 
@@ -399,7 +408,7 @@
 %!error <Invalid call to getpwnam.*> getpwnam ("foo", 1);
 
 %% test/octave.test/system/setpwent-1.m
-%!test
+%!testif HAVE_SETPWENT
 %! x = getpwent ();
 %! setpwent ();
 %! y = getpwent ();
@@ -413,7 +422,7 @@
 %!error <Invalid call to endpwent.*> endpwent (1);
 
 %% test/octave.test/system/getgrent-1.m
-%!test
+%!testif HAVE_GETGRENT
 %! x = getgrent ();
 %! endgrent ();
 %! assert((isstruct (x)
@@ -426,7 +435,7 @@
 %!error <Invalid call to getgrent.*> getgrent (1);
 
 %% test/octave.test/system/getgrgid-1.m
-%!test
+%!testif HAVE_GETGRGID
 %! x = getgrent ();
 %! y = getgrgid (x.gid);
 %! endgrent ();
@@ -439,7 +448,7 @@
 %!error <Invalid call to getgrgid.*> getgrgid (1, 2);
 
 %% test/octave.test/system/getgrnam-1.m
-%!test
+%!testif HAVE_GETGRNAM
 %! x = getgrent ();
 %! y = getgrnam (x.name);
 %! endgrent ();
@@ -452,7 +461,7 @@
 %!error <Invalid call to getgrnam.*> getgrnam ("foo", 1);
 
 %% test/octave.test/system/setgrent-1.m
-%!test
+%!testif HAVE_SETGRENT
 %! x = getgrent ();
 %! setgrent ();
 %! y = getgrent ();
